--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ main {
     background-color: white;
 }
 
+@media screen and (max-width: 1185px) {
+    main {
+        height: 650px;
+        width: 325px;  
+    }
+}
+
 /* || MAIN -> IMG */
 section.decor-image {
     position: relative;
@@ -79,7 +86,6 @@ section.faq {
 .faq-item {
     margin-bottom: 0.9rem;
     border-bottom: hsl(240, 5%, 91%) 1px solid;
-    transition: height 2s;
 }
 
 .faq-title {
@@ -87,27 +93,28 @@ section.faq {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 0.9rem;
-    
     color: hsl(237, 12%, 33%);
     font-size: 1.5em;
 }
 
 .faq-title:hover {
     cursor: pointer;
+    color: hsl(14, 88%, 65%);
 }
 
 .faq-desc {
-    display: none;
+    height: 0;
+    overflow: hidden;
     font-size: 0.9rem;
     color: hsl(240, 6%, 50%); 
+    transition: 0.5s;
 }
 
 /* ARROW ICON */
-.faq-title::after {
-    content: "";
-    background: url(./images/icon-arrow-down.svg) no-repeat;
+.arrow {
     height: 10px;
-    width: 20px;
+    width: 15px;
+    transition: transform 0.5s;
 }
 
 /* || ATTRIBUTION SECTION */
@@ -128,10 +135,13 @@ section.faq {
 }
 
 .desc-active {
-    display: block;
-    padding-bottom: 0.9rem;
+    height: 55px;
 }
 
 .parent-active {
     margin-bottom: 0.9rem;
+}
+
+.rotate {
+    transform: rotate(180deg);
 }
