--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* || VARIABLES & FONTS*/
+/* || VARIABLES, FONTS */
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap");
 /* || GENERAL STYLING */
 * {
@@ -21,9 +21,9 @@ body {
 main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, minmax(1fr, 2fr));
   grid-gap: 50px;
-  width: 1150px;
+  width: 1100px;
   margin: auto;
 }
 
@@ -31,14 +31,15 @@ main {
 .opening h1 {
   width: 75%;
   color: hsl(300deg, 43%, 22%);
-  font-size: 3.5em;
+  font-size: 3.4rem;
 }
 .opening p.description {
   width: 75%;
   padding-top: 20px;
   color: hsl(303deg, 10%, 53%);
-  font-size: 1.1em;
+  font-size: 1.05rem;
   font-weight: 500;
+  line-height: 1.25;
 }
 
 /* || RATING ITEM */
@@ -51,15 +52,67 @@ main {
   border-radius: 8px;
   background-color: hsl(300deg, 24%, 96%);
   color: hsl(300deg, 43%, 22%);
-  font-size: 1.15em;
+  font-size: 1rem;
   font-weight: 700;
 }
 .rating .stars {
   margin: 0 25px 0 10px;
 }
 
+/* || TESTIMONY SECTION */
+.testimony {
+  grid-column-start: 0;
+  grid-column-end: span 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.testimony article {
+  height: 225px;
+  width: 350px;
+  padding: 2.5em 2em 0;
+  border-radius: 10px;
+  background-color: hsl(300deg, 43%, 22%);
+  color: white;
+}
+.testimony article .card-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
+.testimony article .card-header img {
+  height: 40px;
+  width: auto;
+  border-radius: 50%;
+}
+.testimony article .card-header .name {
+  margin-left: 1em;
+  font-weight: 700;
+}
+.testimony article .card-header .name span {
+  display: block;
+  margin-top: 3px;
+  color: hsl(333deg, 80%, 67%);
+  font-weight: 500;
+}
+.testimony article p {
+  font-weight: 500;
+  line-height: 1.3;
+}
+.testimony article p::before {
+  content: open-quote;
+}
+.testimony article p::after {
+  content: close-quote;
+}
+
 /* || FOOTER */
 .attribution {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   font-size: 11px;
   text-align: center;
 }
