--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,4 @@
-/* || VARIABLES & FONTS*/
+/* || VARIABLES, FONTS */
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap');
 $color: (
   "primary-magenta": hsl(300, 43%, 22%),
@@ -6,7 +6,6 @@ $color: (
   "neutral-darkmagenta": hsl(303, 10%, 53%),
   "neutral-lightmagenta": hsl(300, 24%, 96%)
 );
-
 $background: url(./../images/bg-pattern-top-desktop.svg), url(./../images/bg-pattern-bottom-desktop.svg);
 
 /* || GENERAL STYLING */
@@ -30,9 +29,9 @@ body {
 main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, minmax(1fr, 2fr));
   grid-gap: 50px;
-  width: 1150px;
+  width: 1100px;
   margin: auto;
 }
 
@@ -41,15 +40,16 @@ main {
   h1 {
     width: 75%;
     color: map-get($color, primary-magenta);
-    font-size: 3.5em;
+    font-size: 3.4rem;
   }
 
   p.description {
     width: 75%;
     padding-top: 20px;
     color: map-get($color, neutral-darkmagenta);
-    font-size: 1.1em;
+    font-size: 1.05rem;
     font-weight: 500;
+    line-height: 1.25;
   }
 }
 
@@ -64,7 +64,7 @@ main {
     border-radius: 8px;
     background-color: map-get($color, neutral-lightmagenta);
     color: map-get($color, primary-magenta);
-    font-size: 1.15em;
+    font-size: 1rem;
     font-weight: 700;
   }
 
@@ -73,8 +73,67 @@ main {
   }
 }
 
+/* || TESTIMONY SECTION */
+.testimony {
+  grid-column-start: 0;
+  grid-column-end: span 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;  
+
+  article {
+    height: 225px;
+    width: 350px;
+    padding: 2.5em 2em 0;
+    border-radius: 10px;
+    background-color: map-get($color, primary-magenta);
+    color: white;
+
+    .card-header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 1.5em;
+      
+      img {
+        height: 40px;
+        width: auto;
+        border-radius: 50%;
+      }
+      
+      .name {
+        margin-left: 1em;
+        font-weight: 700;
+        
+        span {
+          display: block;  
+          margin-top: 3px;      
+          color: map-get($color, primary-pink);;
+          font-weight: 500;
+        }
+      }
+    }
+
+    p {
+      font-weight: 500;
+      line-height: 1.3;
+
+      &::before {
+        content: open-quote;
+      }
+      &::after {
+        content: close-quote;
+      }
+    }
+  }
+}
+
 /* || FOOTER */
 .attribution {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   font-size: 11px;
   text-align: center;
 }
