--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,10 @@
 }
 
 body {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-items: space-between;
+  min-height: 100vh;
   width: 100%;
   padding-top: 100px;
   background: url(./../images/bg-pattern-top-desktop.svg), url(./../images/bg-pattern-bottom-desktop.svg);
@@ -22,19 +25,20 @@ main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, minmax(1fr, 2fr));
-  grid-gap: 50px;
-  width: 1100px;
+  gap: 50px;
+  max-width: 1100px;
   margin: auto;
 }
 
 /* || OPENING SECTION */
-.opening h1 {
+.opening {
   width: 75%;
+}
+.opening h1 {
   color: hsl(300deg, 43%, 22%);
   font-size: 3.4rem;
 }
 .opening p.description {
-  width: 75%;
   padding-top: 20px;
   color: hsl(303deg, 10%, 53%);
   font-size: 1.05rem;
@@ -43,17 +47,28 @@ main {
 }
 
 /* || RATING ITEM */
+.rating {
+  width: 100%;
+}
 .rating .rating-item {
   display: flex;
   align-items: center;
-  width: 80%;
+  width: 100%;
+  max-width: 420px;
   margin-bottom: 15px;
   padding: 16px;
   border-radius: 8px;
+  gap: 10px;
   background-color: hsl(300deg, 24%, 96%);
   color: hsl(300deg, 43%, 22%);
   font-size: 1rem;
   font-weight: 700;
+}
+.rating #item-2 {
+  margin-left: 50px;
+}
+.rating #item-3 {
+  margin-left: 100px;
 }
 .rating .stars {
   margin: 0 25px 0 10px;
@@ -66,10 +81,17 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+.testimony #card-2 {
+  margin-top: 15px;
+}
+.testimony #card-3 {
+  margin-top: 30px;
 }
 .testimony article {
   height: 225px;
-  width: 350px;
+  max-width: 350px;
   padding: 2.5em 2em 0;
   border-radius: 10px;
   background-color: hsl(300deg, 43%, 22%);
@@ -88,13 +110,14 @@ main {
 }
 .testimony article .card-header .name {
   margin-left: 1em;
+  font-size: 1rem;
   font-weight: 700;
 }
 .testimony article .card-header .name span {
   display: block;
   margin-top: 3px;
   color: hsl(333deg, 80%, 67%);
-  font-weight: 500;
+  font-weight: 400;
 }
 .testimony article p {
   font-weight: 500;
@@ -109,10 +132,7 @@ main {
 
 /* || FOOTER */
 .attribution {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  margin-top: 20px;
   font-size: 11px;
   text-align: center;
 }
@@ -128,4 +148,41 @@ main {
   width: 17px;
   margin-right: 7.5px;
   background: url(./../images/icon-star.svg) no-repeat;
+}
+
+/* || MEDIA QUERIES */
+@media screen and (max-width: 1100px) {
+  body {
+    padding-top: 50px;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 350px;
+    text-align: center;
+    gap: 40px;
+  }
+  main .opening {
+    width: 100%;
+  }
+  main .opening h1 {
+    font-size: 2.5rem;
+  }
+  main .opening .description {
+    font-size: 1.2rem;
+  }
+  .rating #item-2, .rating #item-3 {
+    margin-left: 0;
+  }
+  .rating .rating-item {
+    flex-direction: column;
+  }
+  .testimony {
+    row-gap: 15px;
+    text-align: left;
+  }
+  .testimony #card-2, .testimony #card-3 {
+    margin-top: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
