--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,6 +8,11 @@ $color: (
 );
 $background: url(./../images/bg-pattern-top-desktop.svg), url(./../images/bg-pattern-bottom-desktop.svg);
 
+@mixin flexColumn {
+  display: flex;
+  flex-direction: column;
+}
+
 /* || GENERAL STYLING */
 * {
   box-sizing: border-box;
@@ -16,7 +21,9 @@ $background: url(./../images/bg-pattern-top-desktop.svg), url(./../images/bg-pat
 }
 
 body {
-  height: 100vh;
+  @include flexColumn();  
+  justify-items: space-between;
+  min-height: 100vh;
   width: 100%;
   padding-top: 100px;
   background: $background;
@@ -30,21 +37,20 @@ main {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, minmax(1fr, 2fr));
-  grid-gap: 50px;
-  width: 1100px;
+  gap: 50px;
+  max-width: 1100px;
   margin: auto;
 }
 
 /* || OPENING SECTION */
 .opening {
+  width: 75%;
   h1 {
-    width: 75%;
     color: map-get($color, primary-magenta);
     font-size: 3.4rem;
   }
 
   p.description {
-    width: 75%;
     padding-top: 20px;
     color: map-get($color, neutral-darkmagenta);
     font-size: 1.05rem;
@@ -55,22 +61,26 @@ main {
 
 /* || RATING ITEM */
 .rating {
+  width: 100%;
   .rating-item {
     display: flex;
-    align-items: center;
-    width: 80%;
+    align-items: center;  
+    width: 100%;
+    max-width: 420px;
     margin-bottom: 15px;
     padding: 16px;
     border-radius: 8px;
+    gap: 10px;
     background-color: map-get($color, neutral-lightmagenta);
     color: map-get($color, primary-magenta);
     font-size: 1rem;
     font-weight: 700;
   }
 
-  .stars {
-    margin: 0 25px 0 10px;
-  }
+  #item-2 { margin-left: 50px; }
+  #item-3 { margin-left: 100px; }
+
+  .stars { margin: 0 25px 0 10px; }
 }
 
 /* || TESTIMONY SECTION */
@@ -80,10 +90,14 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;  
+  flex-wrap: wrap;
+  
+  #card-2 { margin-top: 15px; }
+  #card-3 { margin-top: 30px; }
 
   article {
     height: 225px;
-    width: 350px;
+    max-width: 350px;
     padding: 2.5em 2em 0;
     border-radius: 10px;
     background-color: map-get($color, primary-magenta);
@@ -94,7 +108,7 @@ main {
       flex-direction: row;
       align-items: center;
       margin-bottom: 1.5em;
-      
+
       img {
         height: 40px;
         width: auto;
@@ -103,13 +117,14 @@ main {
       
       .name {
         margin-left: 1em;
+        font-size: 1rem;
         font-weight: 700;
         
         span {
           display: block;  
           margin-top: 3px;      
           color: map-get($color, primary-pink);;
-          font-weight: 500;
+          font-weight: 400;
         }
       }
     }
@@ -118,28 +133,19 @@ main {
       font-weight: 500;
       line-height: 1.3;
 
-      &::before {
-        content: open-quote;
-      }
-      &::after {
-        content: close-quote;
-      }
+      &::before { content: open-quote; }
+      &::after { content: close-quote; }
     }
   }
 }
 
 /* || FOOTER */
 .attribution {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  margin-top: 20px;
   font-size: 11px;
   text-align: center;
 }
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
+.attribution a { color: hsl(228, 45%, 44%); }
 
 /* || ACCESSORIES */
 .star {
@@ -148,4 +154,35 @@ main {
   width: 17px;
   margin-right: 7.5px;
   background: url(./../images/icon-star.svg) no-repeat;
+}
+
+/* || MEDIA QUERIES */
+@media screen and (max-width: 1100px) {
+  body { padding-top: 50px;}
+
+  main {
+    @include flexColumn();
+    align-items: center;
+    max-width: 350px;
+    text-align: center;
+    gap: 40px;
+    
+    .opening { 
+      width: 100%; 
+      h1 { font-size: 2.5rem; }
+      .description { font-size: 1.2rem;}
+    }
+  }
+
+  .rating {
+    #item-2, #item-3 { margin-left: 0; }
+    .rating-item { flex-direction: column; }
+  }
+
+  .testimony {
+    row-gap: 15px;
+    text-align: left;
+
+    #card-2, #card-3 { margin-top: 0; }
+  }
 }
