Hero section done

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,84 @@
-/* || VARIABLES AND FONTS *//*# sourceMappingURL=style.css.map */
+/* || VARIABLES AND FONTS */
+@font-face {
+  font-family: Inter;
+  src: url(./../assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+  font-weight: 400 800;
+}
+/* ---------- GENERAL STYLING ---------- */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  min-height: 100vh;
+  width: 90%;
+  margin: auto;
+  background-color: hsl(36, 100%, 99%);
+  font-family: Inter, sans-serif;
+  font-size: 15px;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-template-rows: repeat(3, minmax(1fr, 600px));
+  row-gap: 50px;
+}
+
+button {
+  font-family: inherit;
+}
+
+/* ---------- PAGE STYLING ---------- */
+/* || HEADER SECTION */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2.5rem 0;
+}
+header #header__logo {
+  height: 35px;
+}
+header #header__logo, header #header__icon-menu:hover {
+  cursor: pointer;
+}
+
+nav {
+  display: none;
+}
+nav .nav__menu {
+  list-style-type: none;
+}
+nav .nav__menu li {
+  display: inline;
+}
+
+/* || FEATURED-ARTICLE SECTION */
+.featured-article__title {
+  margin: 0.3em 0;
+  color: hsl(240, 100%, 5%);
+  font-size: 2.5rem;
+  font-variation-settings: "wght" 800;
+  line-height: 1;
+}
+.featured-article__description {
+  margin: 1em 0;
+  color: hsl(236, 13%, 42%);
+  line-height: 1.5;
+}
+.featured-article__read-more-button {
+  height: 35px;
+  width: 50%;
+  border: none;
+  background-color: hsl(5, 85%, 63%);
+  color: hsl(36, 100%, 99%);
+  font-variation-settings: "wght" 700;
+  letter-spacing: 4px;
+}
+
+#featured-article__hero {
+  width: 100%;
+}/*# sourceMappingURL=style.css.map */
