--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body {
   min-height: 100vh;
   width: 90%;
   margin: auto;
+  padding-bottom: 50px;
   background-color: hsl(36, 100%, 99%);
   font-family: Inter, sans-serif;
   font-size: 15px;
@@ -24,7 +25,7 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fill, 1fr);
   grid-template-rows: repeat(3, minmax(1fr, 600px));
-  row-gap: 50px;
+  row-gap: 75px;
 }
 
 button {
@@ -34,6 +35,23 @@ button {
 .description {
   color: hsl(236, 13%, 42%);
   line-height: 1.5;
+}
+.description--color-ofwhite {
+  color: hsl(36, 100%, 99%);
+}
+.description--fontwght-lighter {
+  font-variation-settings: "wght" 250;
+}
+.description--no-margin {
+  margin: 0;
+}
+
+.article-title {
+  margin-bottom: 0.4em;
+  color: hsl(36, 100%, 99%);
+}
+.article-title--color-darkblue {
+  color: hsl(240, 100%, 5%);
 }
 
 /* ---------- PAGE STYLING ---------- */
@@ -62,7 +80,7 @@ button {
   display: inline;
 }
 
-/* || FEATURED-ARTICLE SECTION */
+/* || MAIN-ARTICLE SECTION */
 .main-article__title {
   margin: 0.3em 0;
   color: hsl(240, 100%, 5%);
@@ -98,21 +116,38 @@ button {
   color: hsl(35, 77%, 62%);
 }
 
-.featured-article {
+.fresh-article {
   margin-bottom: 1.75em;
   padding-bottom: 1.25em;
   border-bottom: 1px hsl(236, 13%, 42%) solid;
 }
-.featured-article__titles {
-  margin-bottom: 0.4em;
-  color: hsl(36, 100%, 99%);
-}
-.featured-article__description {
-  color: hsl(36, 100%, 99%);
-  font-variation-settings: "wght" 250;
-}
-.featured-article--last-article {
+.fresh-article--last-article {
   margin: 0;
   padding: 0;
   border: none;
+}
+
+/* || FEATURED ARTICLES SECTION */
+.featured-articles-container {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 35px;
+}
+
+.featured-article {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.featured-article__thumbnail {
+  height: 125px;
+}
+.featured-article__article-number {
+  font-size: 2rem;
+  color: hsl(236, 13%, 80%);
+}
+.featured-article__text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
